
    - Speed up learning quite a bit (up to 25%) by using more efficient SQL.

    - Word tokenizer:
        * Preserve casing of Emacs key sequences like "C-u"
        * Don't capitalize words after ellipses (e.g. "Wait... what?")
        * When adding a full stop to paragraphs which end with a quoted word,
          add it inside the quotes (e.g. "I heard him say 'hello there.'")

0.67 2011-04-27 23:33:08

    - Word tokenizer: Improve matching of Perl class names

    - Require MooseX::StrictConstructor 0.16 for Moose 2.0 compatability

0.66 2011-04-27 07:37:45

    - Die when the user tries --stats without a brain

    - Word tokenizer: stopped matching numbers separately in many cases.
      "95GB", "3D", "800x600" are all single tokens now. This should reduce
      the volume of nonsensical word-number pairs in the output.

0.65 2011-04-26 19:28:27

    - Expand "~" and such in the brain filename argument.

    - Word tokenizer:
        * Recognize "e.g." and other abbreviations as single tokens.
        * Recognize '–' as a word-separating dash.
        * Put a full stop after words separated by dots, like "sources.list".
        * Fix capitalization problems caused by "..."
        * Capitalize "foo!" and "foo."
        * Preserve casing of words such as "POE-Component-IRC"
        * Catch "Acme::POE::Tree" as one word, and preserve its casing
        * Catch "rollin'" as one word when it makes sense
        * Catch 'foo-" as one word when it makes sense, and capitalize at
          start of a sentence
        * Capitalize quoted words at the start of a line

    - The --help option didn't work with Moose >=1.25 (RT #67548). Fixed.

0.64 2010-12-10 11:09:08

    - Say "X lines of Y" instead of "X of Y" when training with
      hailo(1).

    - Bump README.pod in the distro to 0.59~1

0.63 2010-12-09 09:03:30
    - Mark the failing tests in t/command/shell.t as TODO for now.

0.62 2010-12-06 03:30:07